build/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8001"
    spec:
      containers:
        - name: backend
          imagePullPolicy: Always
          image: soundsofanarchy/otus-microservices-architect:v1.3.0-arm
          ports:
            - containerPort: 8000
            - containerPort: 8001
