build/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8000
    - protocol: TCP
      name: debug
      port: 8081
      targetPort: 8001
